# folio_user_loading

./: .gitignore  README.md  pyproject.toml  split_address_2.ipynb
configuration/: configuration.json
examples/: user_groups.tsv
iterations/user_loading/results/: README.md  folio_users_20230807-190942_transform_users.json
iterations/user_loading/source_data/users/: README.md  fakelibrary_users.tsv
mapping_files/: README.md  configuration.json  user_groups.tsv  user_mapping.json
